# ECU-Master-Pro-2026

./: .gitignore  connect  next.config.ts  package.json.seed_tmp  worklog.md
agent-ctx/: 1-3-component-builder.md  11-oem-scan-builder.md  15-16-component-builder.md  2-a-full-stack-developer.md  2-component-builder.md  3-ev-hybrid-view.md  4-ecu-view-builder.md  4-smartlink-view.md  7-component-builder.md  missing-views-1-full-stack-developer.md
db/: custom.db
mini-services/diagnostic-service/: index.ts  package.json
prisma/: schema.prisma  seed.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
src/app/api/: route.ts
src/app/api/ai-assistant/: route.ts
src/app/api/ai-diagnostics/: route.ts
src/app/api/diag/[...path]/: route.ts
src/app/api/dtc-codes/: route.ts
src/app/api/service-records/: route.ts
src/app/api/vehicles/: route.ts
src/components/ecu/: adas-view.tsx  admin-view.tsx  advanced-ecu-view.tsx  advanced-view.tsx  ai-assistant-panel.tsx  ai-diagnostics-view.tsx  ai-predictive-view.tsx  analytics-tab.tsx  auto-connect-view.tsx  canbus-view.tsx  cloud-sync-view.tsx  command-palette.tsx  compliance-view.tsx  connect-device-modal.tsx  dashboard-view.tsx  data-logger-view.tsx  diagnostics-view.tsx  digital-twin-tab.tsx  digital-twin-view.tsx  doip-view.tsx  dongles-view.tsx  dtc-scan-view.tsx  dtc-tool-view.tsx  ecu-view.tsx  error-boundary.tsx  ev-hybrid-view.tsx  flash-verify-view.tsx  flash-view.tsx  fleet-view.tsx  idps-view.tsx  j2534-view.tsx  license-view.tsx  live-data-view.tsx  live-sensors-view.tsx  map-editor-view.tsx  metric-card.tsx  model-info-table.tsx  network-analysis-view.tsx  notification-panel.tsx  oem-scan-view.tsx  (+39 more)
src/lib/: diagnostic-api.ts  digital-twin-engine.ts  dongle-database.ts  idps-monitor.ts  ota-manager.ts  sovd-client.ts  web-obd-manager.ts
src/lib/vas6154/: 99-vas6154.rules  iso22900-types-reference.h  nextjs-api-route.ts  vas6154-detect.ts  vas6154-protocol.h  vas6154d-reference.py
src/stores/: app-store.ts
upload/extracted/vas6154-FINAL/: Makefile  install.sh  libdpdu_vas6154.so.1  vas6154-fwupdate  vas6154-test
upload/extracted/vas6154-FINAL/dpdu/include/: dpdu.h  vas6154.h
upload/extracted/vas6154-FINAL/dpdu/src/: dpdu.c  usb.c
upload/extracted/vas6154-FINAL/firmware/: fwupdate.c
upload/extracted/vas6154-FINAL/kernel/: Makefile  vas6154.c
upload/extracted/vas6154-FINAL/tools/: test.c
upload/extracted2/vas6154-complete/: CMakeLists.txt  install.sh
upload/extracted2/vas6154-complete/dpdu_registry/: modules.xml
upload/extracted2/vas6154-complete/firmware/extract/: vas6154_firmware.py
upload/extracted2/vas6154-complete/include/: dpdu_api.h
upload/extracted2/vas6154-complete/kernel_module/: Makefile  vas6154.c
upload/extracted2/vas6154-complete/scripts/: dpdu_vas6154.pc.in
upload/extracted2/vas6154-complete/src/dpdu/: dpdu_api.c
upload/extracted2/vas6154-complete/src/firmware/: fw_loader.c
upload/extracted2/vas6154-complete/src/usb/: vas6154_usb.c  vas6154_usb.h
upload/extracted2/vas6154-complete/systemd/: vas6154d.service
upload/extracted2/vas6154-complete/tools/: vas6154_test.c
upload/extracted2/vas6154-complete/userspace/lib/: nextjs-api-route.ts  vas6154-detect.ts
